# SynCoTrain

./: .coverage  .gitignore  CITATION.cff  LICENSE  README.md  alignn_pipfreeze.txt  experiment_commands.txt  experiment_setup.py  pu_data_selection.py  pyproject.toml  readme4me.md  readme_4me.txt  requirements.txt  requirements_alignn.txt  requirements_schnet.txt  schnet_pipfreeze.txt  setup.py  stability_commands.txt  stability_commands_in_order.txt  sync.yml  sync_reqs.txt  synth_commands.txt  synth_commands_in_order.txt
SynCoTrain.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
SynthCoTrain.egg-info/: PKG-INFO  SOURCES.txt
_qm9tut/: best_model  log.csv
alignn/: PU_alignn_analysis.py  PU_data_handling.py  _PU_alignn_analysis.py  _ehull_analysis.py  _mod_alignn_setup.py  _old_PU_data_handling.py  _old_preparing_data_byFile.py  alignn_pu_analysis.py  alignn_pu_learning.py  alignn_pu_setup.py  alignn_setup.py  myTrain.py  preparing_data_byFile.py  preparing_data_ff.py
condaEnvs/: PMGEnv.yml  alignn.yml  alignnEnv.yml  allatoms.yml  hangschDev.yml  oqmdEnv.yml  sch2111.yml  schDev.yml  schMat.yml  schnetEnv.yml  synMP_with_built.yml  sync.yml  sync_reqs.txt
data/: README.md
data_scripts/: README.md  _data_preprocess.ipynb  _experiment_data_featrizer.py  _icsd_data_query.py  _oqmd_pymatgen_cleaning.py  _schnet_pu_data.py  add_noise.py  auxiliary_data.py  auxiliary_data_015.py  balancing_labels.py  balancing_labels_75.py  cotraining_labeling.py  crystal_funcs.py  crystal_funcs_attribute_syntax.py  crystal_funcs_updated_syntax.py  icsd_data_query.py  icsd_new_data_query.py  icsd_theoretical_data_query.py  jarvis_oqmd_query.py  oqmd_oxide_clean.py  pymatgen_oxide_clean.py  stability_class.py
ftcp_synth1/: 1002.vasp  1007.vasp  1017.vasp  1022.vasp  1023.vasp  1033.vasp  1047.vasp  1051.vasp  1053.vasp  1062.vasp  1064.vasp  1071.vasp  1073.vasp  1080.vasp  1090.vasp  1106.vasp  1122.vasp  1134.vasp  1135.vasp  1145.vasp  1148.vasp  1169.vasp  1180.vasp  1188.vasp  1196.vasp  1197.vasp  1200.vasp  1204.vasp  1206.vasp  1213.vasp  122.vasp  1223.vasp  1236.vasp  1241.vasp  1247.vasp  1250.vasp  1253.vasp  (+144 more)
(+131152 files in other folders)
